nixidy/generated/prod/owncast/Service-owncast-rtmp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 192.168.50.252
  labels:
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: owncast
    app.kubernetes.io/service: owncast-rtmp
  name: owncast-rtmp
  namespace: media
spec:
  ports:
    - name: rtmp
      port: 1935
      protocol: TCP
      targetPort: 1935
  selector:
    app.kubernetes.io/controller: owncast
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/name: owncast
  type: LoadBalancer
