nixidy/generated/prod/owncast/Service-owncast.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: owncast
    app.kubernetes.io/service: owncast
  name: owncast
  namespace: media
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: owncast
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/name: owncast
  type: ClusterIP
