nixidy/generated/prod/owncast/HTTPRoute-owncast.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: owncast
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: owncast
  name: owncast
  namespace: media
spec:
  hostnames:
    - owncast.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: owncast
          namespace: media
          port: 8080
          weight: 1
